--- a/activity.html
+++ b/activity.html
@@ -6,8 +6,10 @@
     <title>PawPal</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
     <style>
-        .body {
+        body {
             background-color: #173B33; /* Dark background for the app */
             font-family: 'Raleway', sans-serif;
         }
@@ -15,8 +17,8 @@
         .main-container {
             width: 320px;
             height: auto; /* Allow height to adjust based on content */
-            background: white;
             border-radius: 10px;
+            background: white;
             position: relative;
             margin: auto;
             padding: 20px;
@@ -39,7 +41,6 @@
 
         .label-card {
             background-color: #F2674B;
-            border-radius: 10px;
             padding: 20px;
             text-align: center;
             color: white;
@@ -56,7 +57,7 @@
             text-align: center;
             padding: 10px;
             margin-top: 20px;
-            border: none; /* Remove default border */
+            border: 1px solid white; /* Remove default border */
             transition: background 0.3s; /* Smooth transition */
             width: 100%; /* Full width for button */
         }
@@ -179,13 +180,14 @@
 <body>
     <div class="main-container">
         <div class="header">
+            <a href="weight.html"><i class="fa fa-arrow-left float-start" style="color:white; height:30px; width:30px"></i></a>
+            <img src="images/images-removebg-preview.png" alt="Icon" class="float-end" style="width:37px; height:35px" />
             <h1 class="app-title">Paty</h1>
-            <img src="https://via.placeholder.com/37x35" alt="Icon" class="float-end" />
         </div>
         <div class="label-card">
             <h2>Her activity level is</h2>
             <form id="questionnaireForm">
-                <img src="https://via.placeholder.com/204x128" class="img-fluid my-3" alt="Dog Image" />
+                <img src="images/image_2024-11-28_204255297_upscaled.png" class="img-fluid my-3" alt="Dog Image" style="width:204px; height:150px"  />
                 <div class="radio-group" id="activity">
                     <label>
                         <input type="radio" name="activityLevel" value="Not Active">
@@ -272,7 +274,6 @@
 
 
 
-            drawLine();
             $(window).resize(drawLine);
         });
     </script>
