--- a/diet.html
+++ b/diet.html
@@ -6,6 +6,8 @@
     <title>PawPal</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
     <style>
         body {
             background-color: #173B33;
@@ -14,9 +16,10 @@
 
         .main-container {
             max-width: 320px;
-            background: white;
+            background: #173B33;
             border-radius: 10px;
             margin: auto;
+            border: 1px solid white;
             padding: 20px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
         }
@@ -134,27 +137,36 @@
 <body>
     <div class="main-container">
         <div class="header">
-            <img src="https://via.placeholder.com/37x35" alt="Logo" class="mb-2" />
-            <h1 class="app-title">Paty</h1>s
+            <img src="images/images-removebg-preview.png" alt="Icon" class="float-end" style="width:37px; height:35px" />
+            <a href="illness.html"><i class="fa fa-arrow-left float-start" style="color:white; height:30px; width:30px"></i></a>
+            <h1 class="app-title">Paty</h1>
         </div>
-        <div class="text-center text-white mb-3">She has:</div>
         <form id="questionnaireForm">
-            <div class="d-flex flex-wrap justify-content-start" id="tag-container">
+            <div class="d-flex flex-wrap justify-content-start align-items-center" id="tag-container">
+
                 <div class="search-container">
                     <input type="text" class="search-input" placeholder="Search..." id="search-input">
                     <div class="search-icon"></div>
                 </div>
-                <div class="tag tag-default">Diabetes</div>
-                <div class="tag tag-default">Hydrolyzed Protein</div>
-                <div class="tag tag-default">Joint Support</div>
-                <div class="tag tag-default">Liver Support</div>
-                <div class="tag tag-default">Low Fat</div>
-                <div class="tag tag-default">Neoplasia Diet</div>
-                <div class="tag tag-default">Renal Disease</div>
-                <div class="tag tag-default">Weight Loss</div>
-                <div class="tag tag-default">Skin Support</div>
+                <div class="container">
+                    <h2 class="text-white text-center" style="margin-top: 20px;">She requires a diet for:</h2>
+
+                </div>
+                <div class="container">
+                    <div class="tag tag-default">Anxiety</div>
+                    <div class="tag tag-default">Diabetes</div>
+                    <div class="tag tag-default">Hydrolyzed Protein</div>
+                    <div class="tag tag-default">Joint Support</div>
+                    <div class="tag tag-default">Liver Support</div>
+                    <div class="tag tag-default">Low Fat</div>
+                    <div class="tag tag-default">Neoplasia Diet</div>
+                    <div class="tag tag-default">Renal Disease</div>
+                    <div class="tag tag-default">Weight Loss</div>
+                    <div class="tag tag-default">Skin Support</div>
+                </div>
+                <button class="next-button w-100" id="submitButton" type="submit">Continue</button>
+
             </div>
-            <button type="submit" id="submitButton" class="next-button w-100">Continue</button>
         </form>
     </div>
     <!-- Bootstrap JS -->
@@ -162,7 +174,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.1/knockout-latest.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
-    <script src="athletes.js"></script>
     <script>
         $(document).ready(function () {
             $('.tag').on('click', function () {
@@ -181,31 +192,32 @@
             $('#submitButton').on('click', function (event) {
                 event.preventDefault();  // Prevent the form from submitting
 
-                const selecteddiets = [];
+                const selectedIllnesses = [];
                 // Collect selected (toggled) tags
                 $('.tag-selected').each(function () {
-                    selecteddiets.push($(this).text());
+                    selectedIllnesses.push($(this).text());
                 });
 
                 const urlParams = new URLSearchParams(window.location.search);
                 const dogId = urlParams.get('dogId');
                 let dogData = JSON.parse(localStorage.getItem(`dog-${dogId}`)) || {};
 
-                // Add the selected diets to the dog object
-                dogData.diets = selecteddiets;
+                // Add the selected illnesses to the dog object
+                dogData.diet = selectedIllnesses;
 
                 // Save the updated dog data to localStorage
                 localStorage.setItem(`dog-${dogId}`, JSON.stringify(dogData));
 
-                // Get the next dog's ID by incrementing the current dog ID by 1
-                const nextDogId = (parseInt(dogId, 10) + 1).toString();
+                    // Get the next dog's ID by incrementing the current dog ID by 1
+                    const nextDogId = (parseInt(dogId, 10) + 1).toString();
 
-                // Check if the next dog's data exists in localStorage
-                if (localStorage.getItem(`dog-${nextDogId}`)) {
-                    window.location.href = `dogname.html?dogId=${nextDogId}`;
-                } else {
-                    window.location.href = `home.html`;
-                }
+                    // Check if the next dog's data exists in localStorage
+                    if (localStorage.getItem(`dog-${nextDogId}`)) {
+                        window.location.href = `dogname.html?dogId=${nextDogId}`;
+                    } else {
+                        window.location.href = `home.html`;
+                    }
+                
             });
         });
     </script>
