--- a/dogname.html
+++ b/dogname.html
@@ -6,6 +6,8 @@
     <title>PawPal</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
     <style>
         body {
             background-color: #173B33;
@@ -29,7 +31,16 @@
             color: white;
             text-align: center;
             border-radius: 10px 10px 0 0;
+            position: relative;
         }
+
+            .header img {
+                height: 40px;
+                width: 40px;
+                position: absolute;
+                right: 10px;
+                top: 10px;
+            }
 
         .label-card {
             background-color: #F2674B;
@@ -42,21 +53,47 @@
         }
 
         .app-title {
-            font-size: 32px;
+            font-size: 28px;
             font-weight: 900;
             color: white;
         }
+
+        .custom-input, .custom-select {
+            all: unset;
+            width: 100%;
+            color: orange;
+            font-size: 20px;
+            font-family: 'Raleway', sans-serif;
+            font-weight: 600;
+            border-bottom: 2px dotted orange;
+            text-align: center;
+            padding: 5px;
+        }
+
+            .custom-input::placeholder {
+                color: rgba(255, 165, 0, 0.6);
+            }
+
+        .custom-select {
+            appearance: none;
+            background-color: transparent;
+            text-align-last: center;
+        }
+
+            .custom-input:focus, .custom-select:focus {
+                outline: none;
+            }
 
         .next-button {
             background: #F2674B;
             border-radius: 14px;
             color: white;
-            font-size: 20px;
+            font-size: 18px;
             font-weight: 800;
             text-align: center;
             padding: 10px;
             margin-top: 20px;
-            border: none;
+            border: 1px solid white;
             transition: background 0.3s;
             width: 100%;
         }
@@ -65,44 +102,66 @@
                 background: #d95b3b;
             }
 
-        .form-control, .form-select {
-            border-radius: 5px;
+        h2 {
+            font-size: 20px;
+            font-weight: 600;
+        }
+
+        .row {
+            margin-bottom: 10px;
         }
     </style>
 </head>
 <body>
     <div class="main-container">
         <div class="header">
-            <img src="https://via.placeholder.com/37x35" alt="Icon" class="float-end" />
+            <a href="howmany.html"><i class="fa fa-arrow-left float-start" style="color:white; height:30px; width:30px"></i></a>
             <h1 class="app-title">Paty</h1>
+            <img src="images/dog.png" alt="Icon" />
         </div>
         <form id="questionnaireForm" class="text-center mt-4">
             <div class="label-card">
                 <div class="mb-3">
-                    <select class="form-select" id="Gender" aria-label="Select Gender">
-                        <option value="she">She</option>
-                        <option value="he">He</option>
-                    </select>
-                    <select class="form-select" id="spayedStatus" aria-label="Select status">
-                        <option value="has been">has been</option>
-                        <option value="hasn't been">hasn't been</option>
-                    </select>
-                </div>
-                <h2 class="mb-3">spayed</h2>
-                <h2 class="mb-3">is</h2>
-                <div class="mb-3">
-                    <div class="input-group">
-                        <input type="number" class="form-control form-control-sm" id="ageValue" min="0" required>
-                        <select class="form-select form-select-sm" id="ageUnit">
-                            <option value="years">years</option>
-                            <option value="months">months</option>
+                    <div class="row">
+                        <select class="custom-select" id="Gender" aria-label="Select Gender">
+                            <option value="she">She</option>
+                            <option value="he">He</option>
                         </select>
                     </div>
+                    <div class="row align-items-center">
+                        <h2 class="col-3">is</h2>
+                        <div class="col-6">
+                            <div class="d-flex align-items-center">
+                                <input type="number"
+                                       class="custom-input"
+                                       id="ageValue"
+                                       min="0"
+                                       required>
+                                <select class="custom-select" id="ageUnit">
+                                    <option value="years">years</option>
+                                    <option value="months">months</option>
+                                </select>
+                            </div>
+                        </div>
+                        <h2 class="col-3">old,</h2>
+                    </div>
+                    <div class="row align-items-center">
+                        <div class="col-12 d-flex align-items-center">
+                            <select class="custom-select" id="spayedStatus" aria-label="Select status" style="width: auto; margin-right: 10px;">
+                                <option value="has been">has been</option>
+                                <option value="hasn't been">hasn't been</option>
+                            </select>
+                            <h2 class="mb-0">spayed</h2>
+                        </div>
+                    </div>
                 </div>
-                <h2 class="mb-3">old,</h2>
                 <h2 class="mb-3">and is a</h2>
                 <div class="mb-3">
-                    <input type="text" class="form-control" id="breed" placeholder="Enter breed" required>
+                    <input type="text"
+                           class="custom-input"
+                           id="breed"
+                           placeholder="Enter breed"
+                           required>
                 </div>
                 <button type="submit" class="next-button">Next</button>
             </div>
