--- a/food.html
+++ b/food.html
@@ -6,6 +6,8 @@
     <title>PawPal</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
     <style>
         body {
             background-color: #173B33;
@@ -14,11 +16,11 @@
 
         .main-container {
             width: 320px;
-            height: auto; /* Allow height to adjust based on content */
+            height: auto;
             background: white;
             border-radius: 10px;
             position: relative;
-            margin: auto;
+            margin: 20px auto;
             padding: 20px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
         }
@@ -28,7 +30,14 @@
             padding: 10px;
             color: white;
             text-align: center;
-            border-radius: 10px 10px 0 0; /* Rounded top corners */
+            border-radius: 10px 10px 0 0;
+            margin-bottom:0px;
+        }
+
+        .app-title {
+            font-size: 32px;
+            font-weight: 900;
+            color: white;
         }
 
         .label-card {
@@ -38,17 +47,12 @@
             text-align: center;
             color: white;
             font-weight: 700;
-            margin-bottom: 20px; /* Space below the card */
-        }
-
-        .app-title {
-            font-size: 32px;
-            font-weight: 900;
-            color: white;
+            margin-bottom: 20px;
+            margin-top:0px;
         }
 
         .next-button {
-            background: #F2674B; /* Match button color with label card */
+            background: #F2674B;
             border-radius: 14px;
             color: white;
             font-size: 20px;
@@ -56,29 +60,52 @@
             text-align: center;
             padding: 10px;
             margin-top: 20px;
-            border: none; /* Remove default border */
-            transition: background 0.3s; /* Smooth transition */
+            border: 1px solid white;
+            transition: background 0.3s;
+            width: 100%;
+
         }
 
             .next-button:hover {
-                background: #d95b3b; /* Darker shade on hover */
+                background: #d95b3b;
             }
 
-        .form-control, .form-select {
-            border-radius: 5px; /* Rounded corners for inputs */
+        .form-control,
+        .form-select {
+            border-radius: 5px;
+            border: none;
+            border-bottom: 2px dotted orange;
+            color: orange;
+            font-size: 28px; /* Changed to h2 size */
+            font-family: 'Open Sans', sans-serif;
+            font-weight: 600;
+            padding: 10px; /* Increased padding for better look */
+            text-align: center;
+            background-color: transparent;
+            height: auto; /* Allow height to adjust */
         }
+
+            .form-control::placeholder, .form-select::placeholder {
+                color: rgba(255, 165, 0, 0.6);
+            }
+
+            .form-control:focus, .form-select:focus {
+                outline: none;
+                box-shadow: none;
+            }
     </style>
 </head>
 <body>
     <div class="main-container">
         <div class="header">
-            <img src="https://via.placeholder.com/37x35" alt="Icon" class="float-end" />
+            <a href="food.html"><i class="fa fa-arrow-left float-start" style="color:white; height:30px; width:30px"></i></a>
+            <img src="images/images-removebg-preview.png" alt="Icon" class="float-end" style="width:37px; height:35px" />
             <h1 class="app-title">Paty</h1>
         </div>
         <form class="text-center mt-4" id="questionnaireForm">
             <div class="label-card">
                 <h2>She usually eats</h2>
-                <div class="form-group mb-3">
+                <div class="mb-3">
                     <select class="form-select" aria-label="Select food type" id="foodType">
                         <option value="dry food">dry food</option>
                         <option value="wet food">wet food</option>
@@ -88,11 +115,11 @@
                     </select>
                 </div>
                 <h2>by</h2>
-                <div class="form-group mb-3">
-                    <input type="text" class="form-control" placeholder="Enter brand" required id="prevBrand"/>
+                <div class="mb-3">
+                    <input type="text" class="form-control" placeholder="Enter brand" required id="prevBrand" />
                 </div>
                 <h2>and gets</h2>
-                <div class="form-group mb-3">
+                <div class="mb-3">
                     <select class="form-select" aria-label="Select scraps" id="scraps">
                         <option value="some">some</option>
                         <option value="no">no</option>
@@ -100,15 +127,13 @@
                     </select>
                 </div>
                 <h2>scraps</h2>
+                <button type="submit" class="next-button">Next</button>
             </div>
-            <button type="submit" class="next-button">Next</button>
         </form>
     </div>
     <!-- Bootstrap JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.3/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.1/knockout-latest.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script>
         $(document).ready(function () {
             const urlParams = new URLSearchParams(window.location.search);
@@ -120,9 +145,9 @@
 
                 const updatedDogData = {
                     ...dogData,
-                    foodtype: $('#foodType').val(), // Get selected food type
-                    scraps: $('#scraps').val(), // Get selected scraps value
-                    prevbrand: $('#prevBrand').val(), // Get entered brand
+                    foodtype: $('#foodType').val(),
+                    scraps: $('#scraps').val(),
+                    prevbrand: $('#prevBrand').val(),
 
                 };
 
