--- a/howmany.html
+++ b/howmany.html
@@ -6,22 +6,29 @@
     <title>PawPal</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
     <style>
         body {
             background-color: #173B33;
             color: white;
             font-family: 'Raleway', sans-serif;
+            margin: 0;
+            padding: 0;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .main-container {
-            width: 320px;
-            height: auto;
-            background: white;
+            width: 100%;
+            max-width: 500px;
+            background: transparent;
             border-radius: 10px;
-            position: relative;
-            margin: auto;
             padding: 20px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            box-shadow: none;
+            border: 1px solid white;
         }
 
         .header {
@@ -39,28 +46,42 @@
         }
 
         .label-card {
-            background-color: #F2674B;
+            background-color: #173B33;
             border-radius: 10px;
             padding: 20px;
             text-align: center;
             color: white;
             font-weight: 700;
-            margin-bottom: 20px;
         }
 
-        .dog-name {
-            border: 1.23px #F9F9F9 solid;
-            border-radius: 10.75px;
-            padding: 10px;
-            text-align: center;
-            color: #333;
-            font-size: 20px;
-            font-family: Open Sans;
-            font-weight: 600;
-            background-color: #F1E0C7;
+        /* Common input field styles */
+        .custom-input, .custom-select {
+            all: unset;
             width: 100%;
-            max-width: 300px;
+            color: orange;
+            font-size: 20px;
+            font-family: 'Raleway', sans-serif;
+            font-weight: 600;
+            border-bottom: 2px dotted orange;
+            text-align: center;
+            padding: 5px;
+            min-width: 0; /* Ensure input doesn't overflow */
         }
+
+        .custom-select {
+            appearance: none;
+            background-color: transparent;
+            text-align-last: center;
+            max-width: 100px; /* Adjust to ensure proper display */
+        }
+
+            .custom-input::placeholder {
+                color: rgba(255, 165, 0, 0.6); /* Light orange placeholder */
+            }
+
+            .custom-input:focus {
+                outline: none;
+            }
 
         .next-button {
             background: #F2674B;
@@ -71,7 +92,6 @@
             text-align: center;
             padding: 10px;
             width: 100%;
-            max-width: 300px;
             margin-top: 20px;
             border: none;
             transition: background 0.3s;
@@ -85,54 +105,87 @@
             border-radius: 5px;
         }
 
+        .d-flex.align-items-center {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-wrap: wrap; /* Allow wrapping if elements overflow */
+            gap: 5px; /* Add some spacing */
+        }
+
         .error-message {
             color: black;
             margin-top: 10px;
         }
+        h2 {
+            font-size: 20px;
+            font-weight: 600;
+            margin: 0; /* Remove unnecessary gaps */
+            white-space: nowrap; /* Prevent h2 text from wrapping unnecessarily */
+        }
+
     </style>
 </head>
 <body>
     <div class="main-container">
         <div class="header">
-            <h1 class="app-title">Register Your Dog</h1>
+            <h1 class="app-title">Register Your Dogs</h1>
+        </div>
+        <div class="container align-content-center">
+            <img src="images/dogs.png"/>
         </div>
         <form id="dogForm" class="text-center mt-4">
             <div class="label-card">
                 <h2>I have</h2>
-                <div class="mb-3">
-                    <input type="number" class="form-control dog-count-input" id="dogCount" placeholder="Enter number of dogs" min="1" required>
+                <div class="row align-items-center">
+                    <div class="col-6">
+                        <input type="number"
+                               class="custom-input"
+                               id="dogCount"
+                               placeholder="Enter a number"
+                               min="1"
+                               required>
+                    </div>
+                    <div class="col-6">
+                        <h2>Dogs</h2>
+                    </div>
                 </div>
-                <div class="mt-3">They’re called:</div>
-                <div id="dogNamesContainer" class="d-flex flex-column align-items-center"></div>
+                <div class="mt-3"><h2>They’re called:</h2></div>
+                <div id="dogNamesContainer" class="d-flex flex-column align-items-center">
+                    <input type="text"
+                           class="custom-input"
+                           id="dogName"
+                           placeholder="Dog's Name">
+                </div>
                 <div class="error-message" id="errorMessage"></div>
                 <button type="submit" class="next-button">Next</button>
             </div>
         </form>
     </div>
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.3/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script>
-        function updateDogNameInputs() {
-            const dogNamesContainer = document.getElementById('dogNamesContainer');
-            dogNamesContainer.innerHTML = '';
-            const count = Math.max(1, parseInt(document.getElementById('dogCount').value) || 1);
+<!-- Bootstrap JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.3/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script>
+    function updateDogNameInputs() {
+        const dogNamesContainer = document.getElementById('dogNamesContainer');
+        dogNamesContainer.innerHTML = '';
+        const count = Math.max(1, parseInt(document.getElementById('dogCount').value) || 1);
 
-            for (let i = 0; i < count; i++) {
-                const newInput = document.createElement('input');
-                newInput.type = 'text';
-                newInput.className = 'dog-name mb-2';
-                newInput.placeholder = "Enter dog's name";
-                newInput.required = true;
-                dogNamesContainer.appendChild(newInput);
-            }
+        for (let i = 0; i < count; i++) {
+            const newInput = document.createElement('input');
+            newInput.type = 'text';
+            newInput.className = 'dog-name mb-2';
+            newInput.placeholder = "Enter dog's name";
+            newInput.required = true;
+            dogNamesContainer.appendChild(newInput);
         }
-        document.getElementById('dogCount').addEventListener('input', updateDogNameInputs);
-        document.addEventListener('DOMContentLoaded', updateDogNameInputs);
+    }
+    document.getElementById('dogCount').addEventListener('input', updateDogNameInputs);
+    document.addEventListener('DOMContentLoaded', updateDogNameInputs);
 
-        document.getElementById('dogForm').addEventListener('submit', function (event) {
-            event.preventDefault();
+    document.getElementById('dogForm').addEventListener('submit', function (event) {
+        event.preventDefault();
         const dogNames = Array.from(document.querySelectorAll('.dog-name')).map(input => input.value.trim());
         const uniqueNames = new Set(dogNames);
         const errorMessage = document.getElementById('errorMessage');
@@ -141,22 +194,19 @@
             errorMessage.textContent = 'Error: Dog names must be unique.';
         } else {
             errorMessage.textContent = '';
-        const dogs = [];
-        dogNames.forEach((name, index) => {
-            dogs.push({
-                id: index + 1,
-                name: name
+            const dogs = [];
+            dogNames.forEach((name, index) => {
+                dogs.push({
+                    id: index + 1,
+                    name: name
+                });
+                localStorage.setItem(`dog-${index + 1}`, JSON.stringify({ id: index + 1, name: name }));
             });
-        localStorage.setItem(`dog-${index + 1}`, JSON.stringify({id: index + 1, name: name }));
-        });
 
-        // Redirect to the first dog's questionnaire
-        window.location.href = `dogname.html?dogId=1`;
-}
-});
-    </script>
-</body>
-</html>
-    </script>
+            // Redirect to the first dog's questionnaire
+            window.location.href = `dogname.html?dogId=1`;
+        }
+    });
+</script>
 </body>
 </html>
