--- a/illness.html
+++ b/illness.html
@@ -6,6 +6,7 @@
     <title>PawPal</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
         body {
             background-color: #173B33;
@@ -14,9 +15,10 @@
 
         .main-container {
             max-width: 320px;
-            background: white;
+            background: #173B33;
             border-radius: 10px;
             margin: auto;
+            border: 1px solid white;
             padding: 20px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
         }
@@ -134,10 +136,10 @@
 <body>
     <div class="main-container">
         <div class="header">
-            <img src="https://via.placeholder.com/37x35" alt="Logo" class="mb-2" />
+            <img src="images/images-removebg-preview.png" alt="Icon" class="float-end" style="width:37px; height:35px" />
+            <a href="issues.html"><i class="fa fa-arrow-left float-start" style="color:white; height:30px; width:30px"></i></a>
             <h1 class="app-title">Paty</h1>
         </div>
-        <div class="text-center text-white mb-3">She has:</div>
         <form id="questionnaireForm">
             <div class="d-flex flex-wrap justify-content-start align-items-center" id="tag-container">
 
@@ -145,31 +147,38 @@
                     <input type="text" class="search-input" placeholder="Search..." id="search-input">
                     <div class="search-icon"></div>
                 </div>
-                <div class="tag tag-default">Anxiety</div>
-                <div class="tag tag-default">Cancer</div>
-                <div class="tag tag-default">Constipation</div>
-                <div class="tag tag-default">Ear Infections</div>
-                <div class="tag tag-default">Environmental Allergies</div>
-                <div class="tag tag-default">Food Allergies</div>
-                <div class="tag tag-default">Gluten Sensitive</div>
-                <div class="tag tag-default">History of Pancreatitis</div>
-                <div class="tag tag-default">Hyperactive</div>
-                <div class="tag tag-default">Hyperlipidemia</div>
-                <div class="tag tag-default">Hypertriglyceridemia</div>
-                <div class="tag tag-default">Itchiness</div>
-                <div class="tag tag-default">Passes Gas</div>
-                <div class="tag tag-default">Urinary tract</div>
-                <div class="tag tag-default">Chews Paws</div>
-                <div class="tag tag-default">Bad Breath</div>
-                <div class="tag tag-default">Joints</div>
-                <div class="tag tag-default">Skin and Coat</div>
-                <div class="tag tag-default">Tear stains</div>
-                <div class="tag tag-default">Vomiting</div>
-                <div class="tag tag-default">Diarrhea</div>
-                <div class="tag tag-default">Seizures</div>
-                <div class="tag tag-default">Lethargy</div>
+                <div class="container">
+                    <h2 class="text-white text-center" style="margin-top: 20px;">She has:</h2>
+
+                </div>
+                <div class="container">
+                    <div class="tag tag-default">Anxiety</div>
+                    <div class="tag tag-default">Cancer</div>
+                    <div class="tag tag-default">Constipation</div>
+                    <div class="tag tag-default">Ear Infections</div>
+                    <div class="tag tag-default">Environmental Allergies</div>
+                    <div class="tag tag-default">Food Allergies</div>
+                    <div class="tag tag-default">Gluten Sensitive</div>
+                    <div class="tag tag-default">History of Pancreatitis</div>
+                    <div class="tag tag-default">Hyperactive</div>
+                    <div class="tag tag-default">Hyperlipidemia</div>
+                    <div class="tag tag-default">Hypertriglyceridemia</div>
+                    <div class="tag tag-default">Itchiness</div>
+                    <div class="tag tag-default">Passes Gas</div>
+                    <div class="tag tag-default">Urinary tract</div>
+                    <div class="tag tag-default">Chews Paws</div>
+                    <div class="tag tag-default">Bad Breath</div>
+                    <div class="tag tag-default">Joints</div>
+                    <div class="tag tag-default">Skin and Coat</div>
+                    <div class="tag tag-default">Tear stains</div>
+                    <div class="tag tag-default">Vomiting</div>
+                    <div class="tag tag-default">Diarrhea</div>
+                    <div class="tag tag-default">Seizures</div>
+                    <div class="tag tag-default">Lethargy</div>
+                </div>
+                <button class="next-button w-100" id="submitButton" type="submit">Continue</button>
+
             </div>
-            <button class="next-button w-100" id="submitButton" type="submit">Continue</button>
         </form>
     </div>
     <!-- Bootstrap JS -->
