--- a/weight.html
+++ b/weight.html
@@ -6,9 +6,10 @@
     <title>PawPal</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
     <style>
-.body
-        {
+        body {
             background-color: #173B33; /* Dark background for the app */
             font-family: 'Raleway', sans-serif;
         }
@@ -16,8 +17,8 @@
         .main-container {
             width: 320px;
             height: auto; /* Allow height to adjust based on content */
-            background: white;
             border-radius: 10px;
+            background: white;
             position: relative;
             margin: auto;
             padding: 20px;
@@ -40,7 +41,6 @@
 
         .label-card {
             background-color: #F2674B;
-            border-radius: 10px;
             padding: 20px;
             text-align: center;
             color: white;
@@ -57,7 +57,7 @@
             text-align: center;
             padding: 10px;
             margin-top: 20px;
-            border: none; /* Remove default border */
+            border: 1px solid white; /* Remove default border */
             transition: background 0.3s; /* Smooth transition */
             width: 100%; /* Full width for button */
         }
@@ -82,6 +82,7 @@
             font-weight: 700;
             text-align: center;
         }
+
         .radio-group {
             display: flex;
             justify-content: space-around;
@@ -90,14 +91,16 @@
             margin-top: 20px;
         }
 
-        .radio-group::before { /* Remove this line - line is drawn with JS */
-            content: none;
-        }
+            .radio-group::before { /* Remove this line - line is drawn with JS */
+                content: none;
+            }
+
         .custom-radio {
             width: 21px;
             height: 21px;
             display: inline-block; /* Important for consistent height */
         }
+
         .center-line {
             position: absolute;
             height: 2px;
@@ -106,6 +109,7 @@
             top: 50%; /* Center vertically */
             transform: translateY(-50%); /* Adjust for line thickness */
         }
+
         .radio-group {
             display: flex;
             justify-content: space-around;
@@ -141,80 +145,105 @@
             vertical-align: middle; /* Align vertically */
         }
 
-            .radio-group input[type="radio"] {
-                display: none; /* Hide the default radio button */
-            }
+        .radio-group input[type="radio"] {
+            display: none; /* Hide the default radio button */
+        }
 
-            .radio-group .custom-radio {
-                position: relative;
-                width: 21px;
-                height: 21px;
-                background: white;
+        .radio-group .custom-radio {
+            position: relative;
+            width: 21px;
+            height: 21px;
+            background: white;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+            border: 2px solid transparent; /* Default border */
+        }
+
+        .radio-group input[type="radio"]:checked + .custom-radio {
+            background: #F2674B; /* Selected color */
+            border: 2px solid white; /* White border when selected */
+        }
+
+            .radio-group input[type="radio"]:checked + .custom-radio::after {
+                content: '';
+                width: 10px; /* Inner circle size */
+                height: 10px; /* Inner circle size */
+                background: #F2674B; /* Inner circle color */
                 border-radius: 50%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                cursor: pointer;
-                border: 2px solid transparent; /* Default border */
+                position: absolute; /* Position it inside the custom radio */
             }
 
-            .radio-group input[type="radio"]:checked + .custom-radio {
-                background: #F2674B; /* Selected color */
-                border: 2px solid white; /* White border when selected */
+        /* Common input field styles */
+        .custom-input {
+            all: unset;
+            width: 100%;
+            max-width: 100%;
+            color: orange;
+            font-size: 20px;
+            font-family: 'Open Sans', sans-serif;
+            font-weight: 600;
+            border-bottom: 2px dotted orange;
+            padding: 5px;
+            text-align: center;
+        }
+
+            .custom-input::placeholder {
+                color: rgba(255, 165, 0, 0.6); /* Light orange placeholder */
             }
 
-                .radio-group input[type="radio"]:checked + .custom-radio::after {
-                    content: '';
-                    width: 10px; /* Inner circle size */
-                    height: 10px; /* Inner circle size */
-                    background: #F2674B; /* Inner circle color */
-                    border-radius: 50%;
-                    position: absolute; /* Position it inside the custom radio */
-                }
+            .custom-input:focus {
+                outline: none;
+            }
     </style>
 </head>
 <body>
     <div class="main-container">
         <div class="header">
+            <a href="dogname.html"><i class="fa fa-arrow-left float-start" style="color:white; height:30px; width:30px"></i></a>
+            <img src="images/images-removebg-preview.png" alt="Icon" class="float-end" style="width:37px; height:35px" />
             <h1 class="app-title">Paty</h1>
-            <img src="https://via.placeholder.com/37x35" alt="Icon" class="float-end" />
         </div>
-        <div class="label-card">
-            <h2>She weighs</h2>
-            <form id="questionnaireForm">
-                <div class="d-flex justify-content-center align-items-center">
-                    <input type="number" class="form-control" id="weight" style="width: 80px;" min="0" required>
-                    <span class="weight-indicator">kg</span>
-                </div>
-                <h2>and her body is</h2>
-                <img src="https://via.placeholder.com/204x128" class="img-fluid my-3" alt="Dog Image" />
-                <div class="radio-group" id="bodytype">
+        <form id="questionnaireForm">
+            <div class="label-card">
+                <h2>She weighs</h2>
+                <input type="number"
+                       class="custom-input"
+                       id="dogCount"
+                       min="1"
+                       required>
+                kg
+                <h2>and her bodytype is:</h2>
+
+                <img src="images/image_2024-11-28_203219984_upscaled.png" class="img-fluid my-3" alt="Dog Image" style="width:204px; height:128px" />
+                <div class="radio-group" id="activity">
                     <label>
-                        <input type="radio" name="bodyType" value="skinny">
+                        <input type="radio" name="activityLevel" value="Skinny">
                         <div class="custom-radio"></div>
                         Skinny
                     </label>
                     <label>
-                        <input type="radio" name="bodyType" value="justRight">
+                        <input type="radio" name="activityLevel" value="Just Right">
                         <div class="custom-radio"></div>
                         Just Right
                     </label>
                     <label>
-                        <input type="radio" name="bodyType" value="chunky">
-                        <div class="custom-radio"></div>
-                        Chunky
-                    </label>
-                    <label>
-                        <input type="radio" name="bodyType" value="rounded">
+                        <input type="radio" name="activityLevel" value="Rounded">
                         <div class="custom-radio"></div>
                         Rounded
                     </label>
+                    <label>
+                        <input type="radio" name="activityLevel" value="Chunky">
+                        <div class="custom-radio"></div>
+                        Chunky
+                    </label>
                 </div>
                 <div class="description">Waistline is disappearing, difficult to feel ribs. <br />Broad back</div>
-                <button class="next-button" type="submit">Next</button>
-            </form>
-        </div>
-
+                <button class="next-button">Next</button>
+            </div></form>
+    </div>
     </div>
     <!-- Bootstrap JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.3/js/bootstrap.bundle.min.js"></script>
@@ -250,35 +279,33 @@
             const urlParams = new URLSearchParams(window.location.search);
             const dogId = urlParams.get('dogId');
             let dogData = JSON.parse(localStorage.getItem(`dog-${dogId}`));
-$(document).ready(function () {
-    const urlParams = new URLSearchParams(window.location.search);
-    const dogId = urlParams.get('dogId');
-    let dogData = JSON.parse(localStorage.getItem(`dog-${dogId}`)) || {};
+            $(document).ready(function () {
+                const urlParams = new URLSearchParams(window.location.search);
+                const dogId = urlParams.get('dogId');
+                let dogData = JSON.parse(localStorage.getItem(`dog-${dogId}`)) || {};
 
-    $('#questionnaireForm').submit(function (event) {
-        event.preventDefault();
+                $('#questionnaireForm').submit(function (event) {
+                    event.preventDefault();
 
-        const selectedBodyType = $('input[name="bodyType"]:checked').val(); // Get selected body type
+                    const activity = $('input[name="activityLevel"]:checked').val(); // Get selected activity level
 
-        const updatedDogData = {
-            ...dogData,
-            weight: $('#weight').val(),
-            bodytype: selectedBodyType, // Save selected body type
-        };
+                    const updatedDogData = {
+                        ...dogData,
+                        weight: activity, // Save selected body type
+                    };
 
-        // Save updated data in localStorage
-        localStorage.setItem(`dog-${dogId}`, JSON.stringify(updatedDogData));
+                    // Save updated data in localStorage
+                    localStorage.setItem(`dog-${dogId}`, JSON.stringify(updatedDogData));
 
-        // Redirect to activity.html for the same dog
-        window.location.href = `activity.html?dogId=${dogId}`;
-    });
-});
-
+                    // Redirect to activity.html for the same dog
+                    window.location.href = `activity.html?dogId=${dogId}`;
+                });
+            });
 
 
-drawLine();
-        $(window).resize(drawLine);
-});
+
+            $(window).resize(drawLine);
+        });
     </script>
 </body>
 </html>
