--- a/illness.html
+++ b/illness.html
@@ -138,7 +138,7 @@
         <div class="header">
             <img src="images/images-removebg-preview.png" alt="Icon" class="float-end" style="width:37px; height:35px" />
             <a href="issues.html"><i class="fa fa-arrow-left float-start" style="color:white; height:30px; width:30px"></i></a>
-            <h1 class="app-title">Paty</h1>
+            <h1 class="app-title" id="dogname">Paty</h1>
         </div>
         <form id="questionnaireForm">
             <div class="d-flex flex-wrap justify-content-start align-items-center" id="tag-container">
@@ -188,6 +188,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
     <script>
         $(document).ready(function () {
+            const urlParams = new URLSearchParams(window.location.search);
+            const dogId = urlParams.get('dogId');
+            let dogData = JSON.parse(localStorage.getItem(`dog-${dogId}`)) || {};
+            $("#dogname").text(dogData.name)
             $('.tag').on('click', function () {
                 $(this).toggleClass('tag-selected');
                 $(this).toggleClass('tag-default');
@@ -201,6 +205,7 @@
                 });
             });
 
+
             $('#submitButton').on('click', function (event) {
                 event.preventDefault();  // Prevent the form from submitting
 
@@ -213,7 +218,7 @@
                 const urlParams = new URLSearchParams(window.location.search);
                 const dogId = urlParams.get('dogId');
                 let dogData = JSON.parse(localStorage.getItem(`dog-${dogId}`)) || {};
-
+                $(".app-title").text(dogData.name)
                 // Add the selected illnesses to the dog object
                 dogData.illnesses = selectedIllnesses;
 
