--- a/activity.html
+++ b/activity.html
@@ -246,9 +246,12 @@
                     radioGroup.append(line);
                 }
             }
+
             const urlParams = new URLSearchParams(window.location.search);
             const dogId = urlParams.get('dogId');
             let dogData = JSON.parse(localStorage.getItem(`dog-${dogId}`));
+            $(".app-title").text(dogData.name)
+
             $(document).ready(function () {
                 const urlParams = new URLSearchParams(window.location.search);
                 const dogId = urlParams.get('dogId');
